Replace obsolete methods